# nested-mcp-server

./: .gitignore  AGENTS.md  Readme.md  pyproject.toml
.github/agents/: libvirt-mcp-builder.agent.md
docs/: codex-handoff.md  parity-matrix.md  testing.md
scripts/: coverage_integration_first.sh  mcp_test_setup.sh  mcp_test_teardown.sh  run_integration_safe.sh
src/libvirt_mcp_server/: __init__.py  app.py  config.py  errors.py  main.py  schemas.py  server.py
src/libvirt_mcp_server/adapters/: __init__.py  libvirt_adapter.py  qmp_adapter.py
src/libvirt_mcp_server/resources/: __init__.py  domain_resources.py  host_resources.py  network_resources.py  storage_resources.py
src/libvirt_mcp_server/tools/: __init__.py  block_job_tools.py  checkpoint_tools.py  domain_tools.py  host_tools.py  network_tools.py  node_device_tools.py  qmp_tools.py  secret_tools.py  snapshot_tools.py  storage_tools.py
tests/: test_config.py  test_integration_local_hypervisor.py  test_integration_runtime_paths.py  test_libvirt_adapter.py  test_qmp_adapter.py  test_qmp_new_families.py  test_qmp_tools.py  test_server.py  test_tools_domain.py  test_tools_network_storage.py  test_tools_new_completions.py  test_tools_new_families.py  test_tools_snapshot.py  test_tools_stats_and_pin.py
tests/fixtures/: README.md
