[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nested-mcp-server"
version = "0.1.0"
description = "MCP server core for libvirt and QEMU/QMP"
readme = "Readme.md"
requires-python = ">=3.11"
authors = [
  { name = "nested-mcp-server" }
]
dependencies = [
  "pydantic>=2.7",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]

[project.scripts]
nested-mcp-server = "libvirt_mcp_server.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that access local hypervisor resources",
]
